[package]
name = "lecture4"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lecture4_lib"
path = "src/lib.rs"

[[bin]]
name = "lecture4_bin"
path = "src/bin/main.rs"

[dependencies]
rand = "0.8.4"
clap = "^2.33.0"